Add methods for searching and updating users